--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -18,8 +18,9 @@ services:
 
   symfony.mysql:
     image: mysql:5.7
+    ports:
+      - "3306:3306"
     command: --default-authentication-plugin=mysql_native_password
-    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: qAEcE5des7L4tm3n
       MYSQL_DATABASE: symfony
